Closed Bug 1923585 Opened 1 month ago Closed 1 month ago

Changing the search criteria for a saved search may take a long time

Categories

(Thunderbird :: Search, defect)

Thunderbird 115
defect

Tracking

(relnote-thunderbird ?, thunderbird_esr115 wontfix, thunderbird_esr128? fixed, thunderbird132 affected, thunderbird133 verified)

VERIFIED FIXED
133 Branch
Tracking Status
relnote-thunderbird --- ?
thunderbird_esr115 --- wontfix
thunderbird_esr128 ? fixed
thunderbird132 --- affected
thunderbird133 --- verified

People

(Reporter: welpy-cw, Assigned: welpy-cw)

Details

(Keywords: perf)

Attachments

(1 file)

Steps to reproduce:

  1. Create a new saved search folder covering at least two folders, matching messages with "Date" "is before" some date.
  2. Edit the properties of the saved search and change "is before" to "is after".

Expected result:
After each step, all matching messages should be loaded in a reasonable amount of time.

Actual result:
Depending on how many messages do not match the changed search criteria, it can take up to minutes to load all messages while Thunderbird is unresponsive.

This prevents the view from being updated for every message that is removed because it no longer matches the search criteria.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 133 Branch

Pushed by heather@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/54478afb4482
Speed up update of saved search after changing search criteria. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED

Confirming this issue as verified fixed with 133.0b3(20241107210012) using Windows 11, macOS 14, and Ubuntu 22.

Status: RESOLVED → VERIFIED

Comment on attachment 9429832 [details]
Bug 1923585 - Speed up update of saved search after changing search criteria. r=#thunderbird-reviewers

[Approval Request Comment]
User impact if declined: Changing the search criteria for a saved search may take a long time and stall Thunderbird.
Testing completed (on c-c, etc.): c-c and beta
Risk to taking this patch (and alternatives if risky): very low

Attachment #9429832 - Flags: approval-comm-esr128?

Release Note Request (optional, but appreciated)
[Suggested wording]: Significantly speed up loading of a saved search after changing search criteria.

Comment on attachment 9429832 [details]
Bug 1923585 - Speed up update of saved search after changing search criteria. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr128

Attachment #9429832 - Flags: approval-comm-esr128? → approval-comm-esr128+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: