Bug 1923585 - Speed up update of saved search after changing search criteria. r=mkmelin

This prevents the view from being updated for every message that is removed because it no longer matches the search criteria.

Differential Revision: https://phabricator.services.mozilla.com/D225033

--HG--
extra : moz-landing-system : lando